[package]

name = "libssh"
description = "bindings for libssh in Rust 2018"
homepage = "https://github.com/gin-and-miskatonic/libssh.rs"
documentation = "https://github.com/gin-and-miskatonic/libssh.rs"
repository = "https://github.com/gin-and-miskatonic/libssh.rs"
version = "0.0.2"
authors = ["Manuel Schölling <manuel.schoelling@gmx.de>, gin&Miskatonic <gannon056@gmail.com>"]
license = "GPL-2.0"

[dependencies]
log = "0.4.0"
libc = "0.2.0"
